--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button>Get Prediction</button>
         </div>
         <div class="info-box">
-            <img src="./Screenshot 2025-02-13 225234.png" alt="Brain Image">
+            <img src="./public/Screenshot 2025-02-13 225234.png" alt="Brain Image">
             <h3>Predictive Power</h3>
             <p>Our advanced algorithms analyze your symptoms to provide accurate predictions, helping you understand your health better.</p>
         </div>
